<resources>
    <string name="app_name">Garden Guru</string>
    <string name="ok">Ок</string>
    <string name="onboarding_skip">Пропустить</string>
    <string name="onboarding_next">Далее</string>
    <string name="onboarding1_head">Уход за растением</string>
    <string name="onboarding1_hint">Мы подскажем, как и когда правильно \nухаживать за Вашим растением</string>
    <string name="onboarding2_head">Распознавание по фото</string>
    <string name="onboarding2_hint">Если Вы не знаете, обладателем какого растения Вы стали, то GardenGuru подскажет</string>
    <string name="onboarding3_head">Мой сад</string>
    <string name="onboarding3_hint">В Сад можно добавлять неограниченное количество растений</string>
    <string name="login">Авторизация</string>
    <string name="login_text">Нажимая “Продолжить”, вы соглашаетесь с:</string>
    <string name="login_continue">Продолжить с Google</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="privacy_policy_underline"><u>Политикой конфиденциальности</u></string>
    <string name="terms_of_use">Условия использования</string>
    <string name="terms_of_use_underline"><u>Условиями использования</u></string>
    <string name="timetable">Расписание</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="plant_name_and_variety">%1$s (%2$s)</string>
    <string name="you_have_no_events">У вас нет событий</string>
    <string name="you_have_no_events_description">Добавьте растение в ваш Сад\nдля отображения расписания</string>
    <string name="change">Изменить</string>
    <string name="adding">Добавление</string>
    <string name="add_a_plant">Добавить растение</string>
    <string name="next_dots">Далее…</string>
    <string name="next">Далee</string>
    <string name="hide">Скрыть</string>
    <string name="see_more">Просмотреть больше</string>
    <string name="interval_days">Интервал, дней: %1$d</string>
    <string name="summer_interval_days">Лето - интервал, дней: %1$d</string>
    <string name="winter_interval_days">Зима - интервал, дней: %1$d</string>
    <string name="care_difficult">Сложность ухода</string>
    <string name="care_difficult_1">За мной ухаживать очень легко!</string>
    <string name="care_difficult_2">За мной ухаживать легко!</string>
    <string name="care_difficult_3">За мной ухаживать непросто!</string>
    <string name="care_difficult_4">За мной ухаживать сложно!</string>
    <string name="temperature">Температура</string>
    <string name="watering">Полив</string>
    <string name="lighting">Освещение</string>
    <string name="transfer">Пересадка</string>
    <string name="spraying">Опрыскивание</string>
    <string name="feeding">Подкормка</string>
    <string name="no_events_text">Событий на сегодня нет!\nВозвращайтесь завтра</string>
    <string name="complete_all_events_text">Вы позаботились о всех Ваших растениях!</string>
    <string name="congratulations">Поздравляем!</string>
    <string name="care">Уход</string>
    <string name="nutrition">Подкормка</string>
    <string name="planting_time">Время посадки</string>
    <string name="reproduction">Размножение</string>
    <string name="pruning">Обрезка</string>
    <string name="in_summer">Летом</string>
    <string name="in_winter">Зимой</string>
    <string name="disease_and_pests">Болезни и вредители</string>
    <string name="benefits">Польза</string>
    <string name="no_matches">Нет совпадений?</string>
    <string name="try_again">Попробуй ещё раз</string>
    <string name="create_plant">Создать свое растение</string>
    <string name="plant_added">Добавлено растение</string>
    <string name="here_we_will_show_your_plants">Здесь мы будем показывать Ваши растения</string>
    <string name="look_for_a_plant">Искать растение</string>
    <string name="my_plants">Мои растения</string>
    <string name="search">Поиск</string>
    <string name="garden_owner_name">Владелец Сада %1$s</string>
    <string name="attention">Внимание!</string>
    <string name="dialog_want_to_leave_garden">Вы хотите покинуть сад “%1$s” владельца %2$s</string>
    <string name="confirm_deletion">Подтвердить удаление?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="editing">Редактирование</string>
    <string name="delete_garden">Удалить сад</string>
    <string name="save">Сохранить</string>
    <string name="user_roles_text_description">Пользователь с ролью:\n\n<font fgcolor="#88BC87">Новичок</font> - может отмечать выполнение события в расписании\n\n<font fgcolor="#88BC87">Опытный</font> - может вносить изменения в растение из вашего сада\n\n<font fgcolor="#88BC87">Гуру</font> - может контролировать пользователей своего сада</string>
    <string name="joint_care">Совместный уход</string>
    <string name="copy_link">Копировать ссылку</string>
    <string name="garden_management">Управление садом</string>
    <string name="dialog_want_to_delete_garden">Вы хотите удалить Сад “%1$s”?</string>
    <string name="dialog_want_to_delete_plant">Вы хотите удалить растение %1$s из вашего сада?</string>
    <string name="fill_info_about_plant">Заполните информацию о \nрастении</string>
    <string name="add_photo">Добавить фото</string>
    <string name="enter_plant_name">Введите название растения</string>
    <string name="more_info">Хотите указать больше \nподробностей?</string>
    <string name="enter_plant_spicies">Введите вид растения</string>
    <string name="define_care_difficult">Определите сложность ухода</string>
    <string name="plant_info">Информация о растении</string>
    <string name="description...">Описание…</string>
    <string name="description_with_star">Описание…*</string>
    <string name="description">Описание</string>
    <string name="pests_disease">Вредители (болезни)</string>
    <string name="choose_pests">Выберите вредителя(болезни)</string>
    <string name="add_pests">+ Добавить вредителя (болезнь)</string>
    <string name="enter_benefits">Укажите, какую пользу приносит Ваше растение…</string>
    <string name="Ok">Ок</string>
    <string name="set_watering_period">Установите полив для \nрастения</string>
    <string name="choose">Выберите</string>
    <string name="every">Каждые</string>
    <string name="days">Дня</string>
    <string name="weeks">Недели</string>
    <string name="month">Месяца</string>
    <string name="define_comfort_temperature">Укажите комфортную температуру</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="celsium">° С</string>
    <string name="enter_planting_info">Введите инфо по наилучшему \nвремени для посадки/пересадки</string>
    <string name="enter_text">Введите текст</string>
    <string name="enter_pest_name">Введите название вредителя (болезни)</string>
    <string name="enter_info_about_pest">Введите информацию о вредителе (болезни)…</string>
    <string name="load_photo">Загрузить фото</string>
    <string name="delete">Удалить</string>
    <string name="subscription_active">Подписка активна</string>
    <string name="paid_up_to_date">Оплачено до %1$s</string>
    <string name="developer_contact">Связь с разработчиком</string>
    <string name="log_out">Выйти</string>
    <string name="settings">Настройки</string>
    <string name="support_description_text">Введите данные своего запроса. Сотрудник нашей службы поддержки ответит вам в ближайшее время.</string>
    <string name="submit_an_inquiry">Отправить запрос</string>
    <string name="enter_email">Введите E-mail*</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="notification_title">Новое событие!</string>
    <string name="notification_text">На сегодня у вас есть события! Перейдите в приложение, чтобы узнать подобности!</string>
    <string name="description_required">Описание…*</string>
    <string name="add_a_photo">Добавить фото (необязательно)</string>
    <string name="send">Отправить</string>
    <string name="max_attached_files">Максимальное количество документов во вложении: 10</string>
    <string name="file_size_warning">Максимально 100 MB</string>
    <string name="hooray">Ура!</string>
    <string name="support">Поддержка</string>
    <string name="your_request_send">Ваш запрос успешно отправлен</string>
    <string name="request_subject">Тема запроса</string>
    <string name="suggestion_for_improvement">Предложения по улучшению</string>
    <string name="application_bug">Ошибка в приложении</string>
    <string name="complaint">Жалоба</string>
    <string name="other">Другое</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="turn_on_notifications">Вкл. уведомления</string>
    <string name="turn_off_notifications">Выкл. уведомления</string>
    <string name="account_deleting">Удаление аккаунта!</string>
    <string name="are_you_sure">Вы действительно хотите удалить аккаунт?</string>
    <string name="info">Инфо</string>
    <string name="history">История</string>
    <string name="notification">Уведомления</string>
    <string name="performed_email">Выполнено: %1$s</string>
    <string name="beginner">Новичок</string>
    <string name="experienced">Опытный</string>
    <string name="guru">Гуру</string>
    <string name="june_august_summer">Лето (июнь-август)</string>
    <string name="december_february_summer">Лето (декабрь-февраль)</string>
    <string name="event_calendar">Календарь событий</string>
    <string name="no_events">Cобытий нет! \nВозвращайтесь завтра</string>
    <string name="move">Переместить</string>
    <string name="moving">Переезд!</string>
    <string name="choose_garden_to_move">Выберите Сад для перемещения</string>
    <string name="plant_name">Имя растения</string>
    <string name="delete_plant">Удалить растение</string>
    <string name="cancel">Отмена</string>
    <string name="photo_editing">Редактирование фото</string>
    <string name="gallery">Галерея</string>
    <string name="camera">Камера</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="every_n_days_in_summer">Летом каждые %1$d дня</string>
    <string name="every_n_days_in_winter">Зимой каждые %1$d дня</string>
    <string name="require_permissions">Требуются разрешения</string>
    <string name="require_camera_permissions_desc"><font fgcolor="#88BC87">GardenGuru</font> не может получить доступ к камере на вашем устройстве.\nПожалуйста, предоставьте доступ в Настройках.</string>
    <string name="require_notification_permissions_desc"><font fgcolor="#88BC87">GardenGuru</font> не может отправлять уведомления на ваше устройство. Пожалуйста, предоставьте доступ в Настройках.</string>
    <string name="something_is_wrong">Что-то не так, попробуйте позже</string>
    <string name="error_when_upload_image">Ошибка при загрузке изображения, попробуйте позже</string>
    <string name="error_when_create_garden">Ошибка при создании сада, попробуйте позже</string>
    <string name="error_garden_not_selected">Выберите сад</string>
    <string name="error_not_all_data_populated">Не все обязательные поля заполнены</string>
    <string name="error_image_is_loading">Фото еще не загрузилось, попробуйте позже</string>
    <string name="error_loading_data">Не удалось загрузить данные.\nПроверьте интернет соединение</string>
    <string name="error_update_data">Не удалось обновить данные.\nПроверьте интернет соединение</string>
    <string name="error_deleting">Не удалось удалить данные.\nПроверьте интернет соединение</string>
    <string name="internet_connection_error">Ошибка интернет-соединения</string>
    <string name="no_such_app">Нет приложения для данного действия</string>
    <string name="direct_sunlight">Прямые солнечные лучи</string>
    <string name="diffused_sunlight">Яркий, рассеянный свет</string>
</resources>