<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_photo_editing"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/photo_editing"
            android:textColor="@color/black_1_2"
            android:textSize="13sp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/gallery"
            android:textColor="@color/text_green"
            android:textSize="17sp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/camera"
            android:textColor="@color/text_green"
            android:textSize="17sp"/>

        <View
            android:id="@+id/divider_delete_photo"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delete_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/delete_photo"
            android:textColor="@color/text_green"
            android:textSize="17sp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>







    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/button_green"
        android:text="@string/cancel"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.appcompat.widget.LinearLayoutCompat>
