<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:parentTag="androidx.appcompat.widget.LinearLayoutCompat">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/enter_planting_info"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/enter_text"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="25dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/sf_ui_font"
        android:text="@string/Ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</merge>