<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/primary_background"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="-16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:text="@string/submit_an_inquiry"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="16dp"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:text="@string/support_description_text"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="12dp"
                android:paddingHorizontal="16dp"
                android:lines="1"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/enter_email"/>

            <com.entexy.gardenguru.ui.customview.spinner.SpinnerLayout
                android:id="@+id/spinner_themes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:hint_color="@color/gray"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="18dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="12dp"
                android:paddingHorizontal="16dp"
                android:gravity="start"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:background="@drawable/bg_edit_text_small_corners"
                android:hint="@string/description_required"/>


            <com.entexy.gardenguru.ui.customview.ClickableTextView
                android:id="@+id/bt_attach_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="25dp"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:text="@string/attach_a_file"
                android:drawableStart="@drawable/ic_clip"
                android:gravity="center_vertical"
                android:drawablePadding="14dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_file_size_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginHorizontal="16dp"
                android:paddingHorizontal="73dp"
                android:paddingVertical="10dp"
                app:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_green_with_white_stroke"
                android:text="@string/file_size_warning"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_max_file_attachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginHorizontal="16dp"
                android:paddingHorizontal="73dp"
                android:paddingVertical="10dp"
                app:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_green_with_white_stroke"
                android:text="@string/max_attached_files"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_file_attachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="12"
                tools:listitem="@layout/rv_item_attachment_file"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="29dp"
                android:layout_marginHorizontal="16dp">

                <com.entexy.gardenguru.ui.customview.ClickableTextView
                    android:id="@+id/bt_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="bottom|center"
                    android:paddingVertical="12dp"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:background="@drawable/button_green_stroke"
                    android:text="@string/send"/>

            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>
