<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_flower_delete_plant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="27dp"
        android:text="@string/attention"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dialog_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textColor="@color/gray"
        android:text="@string/dialog_want_to_delete_plant"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/icon"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:src="@color/white10"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <com.entexy.gardenguru.ui.customview.ClickableTextView
            android:id="@+id/bt_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textColor="@color/gray"
            android:textAlignment="center"
            android:paddingVertical="6dp"
            android:text="@string/no"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:src="@color/white10"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <com.entexy.gardenguru.ui.customview.ClickableTextView
            android:id="@+id/bt_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:layout_weight="1"
            android:textColor="@color/primary_green"
            android:paddingVertical="6dp"
            android:text="@string/yes"
            android:textSize="17sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>





</androidx.constraintlayout.widget.ConstraintLayout>
